_sass/base.scss
@charset "utf-8";

// Import partials.
@import
  "base/reset",
  "base/fonts",
  "base/colors",
  "base/variables",
  "base/utility",
  "base/spacing",
  "base/grid",
  "base/type"
;

// Header styling

.header-nav {
  box-shadow: 0px 2px 5px rgba(0,0,0,0.1);
  background: #fff;
  .header-nav-inner-wrap {
    padding-top: 15px;
    padding-bottom: 6px
  }
}
.header-logo {
  float: left;
  img {
    width: 200px;
  }
}
.header-links {
  float: right;
  margin-bottom: 0;
  padding-left: 0;
  position: relative;
  top: -5px;
  li {
    list-style: none;
    display: inline-block;
    margin-left: 4px;
    a {
      // color: #3DA7ff;
      font-weight: bold;
      font-size: 13px;
      // text-transform: uppercase;
      // margin-right: 20px;
      &:hover {
        border-bottom: 2px solid #3DA7ff;
      }
    }
    a.pill-link {
      margin: 0;
      background: #eee;
      border: 1px solid #eee;
      padding: 6px 12px 5px 13px;
      border-radius: 16px;
      display: inline-block;
      font-size: 13px;
      color: $gray;
      font-weight: bold;
      &:hover {
        background: #f1f1f1;
        border-color: #aaa;
      }
    }
  }
  li:first-child {
    margin-left: 0;
  }
}
@media only screen and (max-width: $breakpoint--mobile) {
  .header-nav-inner-wrap { padding-bottom: 3px; }
  .header-logo { float: none; }
  .header-logo a { width: 280px; margin: 4px auto 16px;  display: block; }
  .header-logo img { width: 100%; }
  .header-links { margin-bottom: 5px; text-align: center; float: none; }
  .header-links li {margin-left: 0;}
  .header-links li a.pill-link { font-size: 11px; padding: 4px 8px; margin-bottom: 5px; }
}

@media only screen and (max-width: 900px) {
  .header-links .normal-link {
    display: none;
  }
}

// Homepage logo

    .logo-vertical {
      width: 320px;
      margin: 24px 24px 32px;
    }

.lesson-list { border-bottom: 1px solid #e6e6e6; }
.lesson-list a {
  display: block;
  background: #fff;
  padding: 14px 18px;
  border: 1px solid #e6e6e6;
  border-bottom: 0;
  color: #333;
  position: relative;
  .lesson-list--item-wrap {
    margin-right: 50px;
  }
  .lesson-list--title {
    font-weight: bold;
  }
  .lesson-list--artist {
    font-size: 14px;
    display: block;
  }
  .lesson-list--year {
    position: absolute;
    top: 14px;
    right: 18px;
    font-size: 14px;
    color: #aaa;
  }
  .lesson-list--pdf {
    font-size: 11px;
    background: yellow;
    border-radius: 2px;
    padding: 1px 3px 0px;
    display: inline-block;
  }
}

// Lessons admin page

.lesson-table {
  td {
    border: 1px solid #aaa;
    padding: 5px;
  }
}

// Nov 2019 update - lesson item

.song-listing-wrapper {
  margin: 0 auto;
  padding: 0;
  max-width: 480px;
}

.song-listing {
  list-style: none;
  border-top: 1px solid #EEE;
  padding: 12px 0;
  margin: 0;
  position: relative;
  h3 {
    margin: 0 72px 0 0;
    a {
      color: #000;
      display: block;
      &:hover span {
        border-bottom: 2px solid black;
      }
    }
  }
  p {
    margin: 0;
    font-size: 13px;
    color: #aaa;
  }
  p.featured_label {
    position: absolute;
    top: 12px;
    right: 0px;
    display: inline-block;
    color: #000;
    background: #FEDC45;
    font-weight: bold;
    padding: 2px 5px;
    font-size: 11px;
  }
  p.featured_label[data-patreon-url=""] {
    opacity: .1;
    cursor: default;
  }
}
.song-listing:last-child {
  border-bottom: 1px solid #EEE;
}



// search

#search-box {
  border: 1px solid #ddd;
  border-radius: 2px;
  padding: 0px 12px;
  font-size: 18px;
  height: 32px;
  margin: 0 0 24px 0;
  box-sizing: border-box;
}

#search-button {
  box-sizing: border-box;
  background: $blue;
  border-radius: none;
  color: white;
  display: inline-block;
  margin: 0;
  padding: 0 7px;
  font-size: 14px;
  height: 32px;
  &:hover {
    cursor:pointer;
  }
  -webkit-border-radius:0px;
  -webkit-appearance: none;
}

#noQueryPrompt {

}

#yesQueryPrompt {
  display: none;
}



// Put some space below YouTube videos, bruh
iframe {
  margin-bottom: 24px;
}


// Tag list styling

.tag-list {
  list-style: none;
  margin: 0;
  padding: 0;
}
.tag-list li {
  list-style: none;
  display: inline-block;
  padding: 0;
  margin: 0;
}
.tag-list li a {
  border: 1px solid #ccc;
  border-radius: 4px;
  color: #777;
  margin-right: 4px;
  font-size: $font-size--xsmall;
  padding: 4px 8px;
}

// Lesson Head
.lesson-head {
  padding-bottom: 12px;
  border-bottom: 1px solid #ccc;
}
.lesson-head-prehead {
  margin: 0;
  font-size: $font-size--small;
}
.lesson-head-title {
  margin-top: 0;
  margin-bottom: 0;
}
.lesson-head-subhead {
  margin: 0 0 8px 0;
  font-size: $font-size--small;
}

